Add forward declaration for TextAffinity in PWA

position_with_affinity.h includes TextAffinity,
but uses only declaration.
We should instead do a forward declaration for
TextAffinity.

Bug: 831592
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_layout_ng
Change-Id: Ia4d167bbf1eb3e91264a526972324cfc5cb90e33
Reviewed-on: https://chromium-review.googlesource.com/1025539
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Commit-Queue: Tanvir Rizvi <tanvir.rizvi@samsung.com>
Cr-Commit-Position: refs/heads/master@{#553044}
Former-commit-id: 7910bffb95f4843ded6cf7e6836ab1aae9b6e20e