third_party/blink/renderer/core/editing/position_with_affinity.cc
@@ -5,6 +5,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "third_party/blink/renderer/core/editing/position_with_affinity.h"
 
+#include "third_party/blink/renderer/core/editing/text_affinity.h"
+
 namespace blink {
 
 template <typename Strategy>
